RESOLVED FIXED303712
[blocks-in-inline] Call hasContentfulInlineLine() instead of hasLines() on a blocks when applicable
https://bugs.webkit.org/show_bug.cgi?id=303712
Summary [blocks-in-inline] Call hasContentfulInlineLine() instead of hasLines() on a ...
alan
Reported 2025-12-07 14:41:39 PST
ssia
Attachments
Patch (9.28 KB, patch)
2025-12-07 14:46 PST, alan
no flags
[fast-cq]Patch (9.46 KB, patch)
2025-12-07 15:16 PST, alan
no flags
alan
Comment 1 2025-12-07 14:46:29 PST
alan
Comment 2 2025-12-07 15:16:15 PST
Created attachment 477658 [details] [fast-cq]Patch
EWS
Comment 3 2025-12-07 17:37:18 PST
Committed 304078@main (aeb4e26c71b1): <https://commits.webkit.org/304078@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477658 [details].
Radar WebKit Bug Importer
Comment 4 2025-12-07 17:38:12 PST
Note You need to log in before you can comment on or make changes to this bug.