[blocks-in-inline] Call hasContentfulInlineLine() instead of hasLines() on a blocks when applicable https://bugs.webkit.org/show_bug.cgi?id=303712

Reviewed by Antti Koivisto.

This is in preparation for removing RenderBlockFlow::hasLines().

* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.cpp:
(WebCore::LayoutIntegration::InlineContent::hasContentfulInlineLevelBox const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.h:
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::hasContentfulInlineLine const):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:
* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::firstLineBaseline const):
(WebCore::RenderBlockFlow::lastLineBaseline const):
(WebCore::RenderBlockFlow::hasContentfulInlineLine const):
* Source/WebCore/rendering/RenderBlockFlow.h:
* Source/WebCore/rendering/RenderDeprecatedFlexibleBox.cpp:
(WebCore::blockContainerForLastFormattedLine):
* Source/WebCore/rendering/TextBoxPainter.cpp:
(WebCore::emphasisMarkExistsAndIsAbove):

Canonical link: https://commits.webkit.org/304078@main