Source/WebCore/layout/integration/inline/LayoutIntegrationInlineContent.h
@@ -70,6 +70,7 @@ public:
     InlineDisplay::Content& displayContent() { return m_displayContent; }
     const InlineDisplay::Content& displayContent() const { return m_displayContent; }
     bool hasContentfulInFlowBox() const;
+    bool hasContentfulInlineLevelBox() const;
 
     FloatRect scrollableOverflow() const { return m_scrollableOverflow; }
     FloatRect inkOverflow() const { return m_inkOverflow; }
