Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h
@@ -111,6 +111,7 @@ public:
     bool isPaginated() const;
     size_t lineCount() const;
     bool hasContentfulInlineOrBlockLine() const;
+    bool hasContentfulInlineLine() const;
     bool isSelfCollapsingContent() const;
     bool hasInkOverflow() const;
     LayoutUnit firstLineBaseline() const;
