Source/WebCore/rendering/TextBoxPainter.cpp
@@ -90,7 +90,7 @@ static std::optional<bool> emphasisMarkExistsAndIsAbove(const RenderText& render
 
     if (auto* annotation = findRubyAnnotation()) {
         // The emphasis marks are suppressed only if there is a ruby annotation box on the same side and it is not empty.
-        if (annotation->hasLines() && isAbove == (annotation->style().rubyPosition() == RubyPosition::Over))
+        if (annotation->hasContentfulInlineLine() && isAbove == (annotation->style().rubyPosition() == RubyPosition::Over))
             return { };
     }
 
